--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,20 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+
+    //Added to fix gradle compatibility issue
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+//    implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
+//    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+//    implementation 'com.google.android.gms:play-services-games:16.0.0'
+//    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+//    implementation 'com.google.android.gms:play-services-location:16.0.0'
+//    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
+//    implementation 'com.google.android.gms:play-services-base:16.0.1'
+//    implementation 'com.google.android.gms:play-services-identity:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
 }
+apply plugin: 'com.google.gms.google-services'
