--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-base:16.0.1'
 //    implementation 'com.google.android.gms:play-services-identity:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+
 }
 apply plugin: 'com.google.gms.google-services'
