Fixed the recycler view so only users can see items they created, and general styling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".PlannerActivity" />
         <activity android:name=".RoutineActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".PlannerAdapterActivity"></activity>
+        <activity android:name=".viewholders.PlannerAdapterActivity"></activity>
     </application>
 
 </manifest>
