--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
 apply plugin: 'com.google.gms.google-services'
