--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'dodo5097rip'
+            storeFile file('C:/Users/Derek/Keystore/finalyear.jks')
+            storePassword 'dodo5097rip'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.derek.gymbuddy"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -14,12 +22,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
@@ -27,19 +36,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.5'
-
     //Added to fix gradle compatibility issue
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:animated-vector-drawable:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-//    implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
-//    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
-//    implementation 'com.google.android.gms:play-services-games:16.0.0'
-//    implementation 'com.google.android.gms:play-services-maps:16.0.0'
-//    implementation 'com.google.android.gms:play-services-location:16.0.0'
-//    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
-//    implementation 'com.google.android.gms:play-services-base:16.0.1'
-//    implementation 'com.google.android.gms:play-services-identity:16.0.0'
+    //    implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
+    //    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    //    implementation 'com.google.android.gms:play-services-games:16.0.0'
+    //    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    //    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
+    //    implementation 'com.google.android.gms:play-services-base:16.0.1'
+    //    implementation 'com.google.android.gms:play-services-identity:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-core:16.0.5'
@@ -47,9 +55,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 	'com.google.android.gms:play-services-wearable:16.0.1'
+    wearApp project(':wearapplication')
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
+    implementation 'com.squareup:otto:1.3.6'
+
 }
 apply plugin: 'com.google.gms.google-services'
