--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     //    implementation 'com.google.android.gms:play-services-identity:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
-    implementation 'com.google.firebase:firebase-core:16.0.5'
+
     implementation 'com.firebaseui:firebase-ui-database:4.2.1'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
@@ -63,6 +63,6 @@ dependencies {
     wearApp project(':wearapplication')
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.squareup:otto:1.3.6'
-
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
