--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -30,11 +31,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -42,10 +42,7 @@
         <activity android:name=".RoutineActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".viewholder.PlannerAdapterActivity" />
-        <activity
-            android:name=".TestingActivity"
-            android:label="@string/title_activity_testing"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TestingActivity" />
         <activity android:name=".RepCounterActivity" />
 
         <service
@@ -54,7 +51,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-
                 <data
                     android:host="*"
                     android:pathPrefix="/my_path"
