--- a/wearapplication/src/main/AndroidManifest.xml
+++ b/wearapplication/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.wearapplication">
 
     <uses-feature android:name="android.hardware.type.watch" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
