--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,8 @@ dependencies {
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.squareup:otto:1.3.6'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
