--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.derek.gymbuddy">
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -27,12 +28,14 @@
 
     <application
         android:allowBackup="true"
+        tools:replace="android:icon,android:theme"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".WeightHistoryActivity"></activity>
+        <activity android:name=".WeightHistoryListActivity"></activity>
+        <activity android:name=".WeightHistoryActivity" />
         <activity android:name=".TestWriteToFileActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
