--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,16 @@
 
     <application
         android:allowBackup="true"
-        tools:replace="android:icon,android:theme"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
-        <activity android:name=".WeightHistoryListActivity"></activity>
+        android:theme="@style/Theme.AppCompat"
+        tools:replace="android:icon,android:theme">
+        <activity android:name=".TestLeaderboardActivity"></activity>
+        <activity android:name=".LeaderBoardActivity" />
+        <activity android:name=".BottomNavActivity" />
+        <activity android:name=".WeightHistoryListActivity" />
         <activity android:name=".WeightHistoryActivity" />
         <activity android:name=".TestWriteToFileActivity" />
         <activity android:name=".LoginActivity">
@@ -85,7 +88,10 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
     </application>
 
 </manifest>
