--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".RoutineActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".viewholder.PlannerAdapterActivity" />
-        <activity android:name=".TestingActivity" />
+        <activity android:name=".RepCounterListActivity" />
         <activity android:name=".RepCounterActivity" />
 
         <service
